# query-analyzer

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  redshift.config.json
docs/: AGGREGATION_SYNTAX.md  CRUD.md  GLOSSARY.md  PERFORMANCE.md  QUERY_SYNTAX.md  roadmap.md
examples/product-service/: product.service.ts
examples/user-service/: user.service.ts  variable-query.ts
src/: ast_parser.rs  config.rs  lib.rs  main.rs
