[package]
name = "mongo-analyzer"
version = "0.1.0"
edition = "2021"
description = "Comprehensive MongoDB query analysis tool for NestJS projects"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/mongo-analyzer"
homepage = "https://github.com/yourusername/mongo-analyzer"
documentation = "https://docs.rs/mongo-analyzer"
readme = "README.md"
keywords = ["mongodb", "nestjs", "typescript", "cli", "analyzer"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mongo-analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
swc_core = { version = "56.0.0", features = ["common", "ecma_parser", "ecma_ast", "ecma_visit"] }
swc_ecma_parser = "33.0.1"
tokio = { version = "1.0", features = ["full"] }
